--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,120 @@
+
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+li{
+  list-style:none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a{
+  text-decoration: none;
+  color:#333;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+header{
+  width:100%;
+  height:auto !important;
+  position:fixed;
+  top:0;
+  left:0;
+  z-index:100;
+  font-family : "Spoqa Han Sans Neo", "sans-serif";
+  word-break: keep-all;
+  font-weight: 600;
+}
+
+.head{
+  width:100%;
+  height:60px;
+  display:flex;
+  justify-items: center;
+  margin : 0 50px;
+  justify-content: space-between;
+  background-filter : blur(40px);
+}
+
+.logo{
+  width:100px;
+  height:auto !important;
+  background-image : url('../public/img/kko_logo\(fin\).png');
+  background-size : contain;
+  background-repeat : no-repeat;
+  background-position: 0 20px;
+}
+.logo a{
+  display:block;
+  height:60px;
+}
+
+.top_nav{
+  display:flex;
+  margin-right: 50px;  
+  align-items: center;
+}
+.top_nav a{
+  margin-right: 50px;
+}
+.top_nav a:hover{
+  font-weight:900;
+  border-bottom:1px solid #000;
+}
+.service{
+  margin-right: 50px;
+  cursor:pointer;
+}
+.service:hover{
+  font-weight:900;
+  border-bottom:1px solid #000;
+}
+.service_nav{
+  position:fixed;
+  height:80px;
+  top:60px;
+  left:0;
+  width:100%;
+  display:flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-flow: row wrap;
+  border-top:1px solid #ccc;
+  border-bottom:1px solid #ccc;
+  display:none;
 }
-
-.App-link {
-  color: #61dafb;
+.service_nav a{
+  margin : 0 20px 0 20px;
+  border-bottom: 1px solid #fff;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.service_nav a:hover{
+  border-bottom:1px solid #000;
+}
+.open{
+  display:flex;
+}
+/*body*/
+.inner{
+  width:100%;
+  justify-content: flex-end;
+  display:flex;
+  align-items: center;
+}
+.visual img{
+  width:440px;
+  height: 440px;
+  margin : 200px 100px 0 0;
+}
+.text{
+  font-size:80px;
+  line-height:100px;
+  font-weight:bold;
+  position:absolute;
+  top:200px;
+  left:100px;
+}
+.text h4{
+  white-space: pre-line;
+}
+.text i{
+  border : 4px solid rgb(255, 242, 0);
 }
