--- a/src/App.css
+++ b/src/App.css
@@ -27,12 +27,12 @@ header{
 
 .head{
   width:100%;
-  height:60px;
+  height:70px;
   display:flex;
   justify-items: center;
   margin : 0 50px;
   justify-content: space-between;
-  background-filter : blur(40px);
+  backdrop-filter : blur(40px);
 }
 
 .logo{
@@ -98,6 +98,13 @@ header{
   justify-content: flex-end;
   display:flex;
   align-items: center;
+  flex-wrap : nowrap;
+  margin:auto;
+}
+.visual{
+  flex-basis: 100%;
+  display:flex;
+  justify-content: flex-end;
 }
 .visual img{
   width:440px;
@@ -105,11 +112,11 @@ header{
   margin : 200px 100px 0 0;
 }
 .text{
-  font-size:80px;
-  line-height:100px;
+  font-size:60px;
+  line-height:80px;
   font-weight:bold;
   position:absolute;
-  top:180px;
+  top:30%;
   left:100px;
 }
 .text h4{
@@ -118,4 +125,56 @@ header{
 .text i{
   border : 4px solid rgb(255, 242, 0);
   margin-left : 5px;
+}
+.container{
+  width : calc(100% - 100px)!important;
+  margin:15% auto;
+  display:flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.img-box{
+  display:block;
+  margin: auto;
+  flex-grow:1;
+
+}
+.img-box img{
+  width:610px;
+  height: 343px;
+  border-radius:30px;
+}
+.textBox{
+  flex-grow:1;
+  word-break:keep-all;
+  padding-left:93px;
+  font-family:"Spoqa Han Sans Neo", "sans-serif";
+}
+.textBox h3{
+  font-size:40px;
+  font-weight:bold;
+}
+.textBox p{
+  font-size:16px;
+  line-height:30px;
+  font-weight:550;
+}
+.service-zone{
+  width:100%;
+  margin:15% auto;
+
+}
+.title-box{
+  padding:5%;
+  
+}
+.title-box p{
+  font-size:25px;
+  font-weight:bold;
+
+}
+.title-box h3{
+  font-size:50px;
+  font-weight:bold;
+  margin-top:30px;
 }
