--- a/src/App.css
+++ b/src/App.css
@@ -203,13 +203,25 @@ body{
   font-weight:bold;
   margin-top:30px;
 }
+.scroll-section{
+  height:2500px;
+}
 .scroll-area{
-  overflow-x:hidden;
+  overflow-x:scroll;
   width:100%;
   height:600px;
+  position:sticky;
+  top:150px;
+}
+.scroll-area::-webkit-scrollbar{
+  display:none;
+}
+.scroll-ani{
+  margin-left:0px;
   display:flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
+  transition: all .5s;
 }
 .business{
   margin-right:14px;
@@ -293,3 +305,4 @@ body{
   bottom:5px;
   right:10px;
 }
+
