--- a/src/App.css
+++ b/src/App.css
@@ -190,8 +190,8 @@ body{
 
 }
 .title-box{
-  padding:5%;
-  
+  padding:5% 5% 0 5%;
+  position: relative;
 }
 .title-box p{
   font-size:25px;
@@ -306,3 +306,83 @@ body{
   right:10px;
 }
 
+.support{
+  width:150px;
+  height: 150px;
+  border-radius: 50%;
+  background :#fff;
+  position: absolute;
+  top:35%;
+  right:5%;
+  text-align: center;
+  cursor:pointer;
+}
+.support p{
+  color:#000;
+  font-size:16px;
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform : translate(-50%,-50%);
+  margin:0;
+  cursor:pointer;
+}
+.interview{
+  width: 100%;
+  height:100%;
+  padding-top : 3%;
+  overflow-x:scroll;
+
+}
+.interview::-webkit-scrollbar{
+  display:none;
+}
+.interview-inner{
+  display:flex;
+  justify-content: flex-start;
+}
+
+.interview-link{
+  width:90%;
+  height:497px;
+  background:#4a4647;
+  border-radius :30px;
+  overflow:hidden;
+  flex-shrink: 0;
+  margin:0 5%;
+  display:flex;
+}
+.interview-img{
+  width:50%;
+  height:100%;
+  background-size:60%;
+  background-repeat: no-repeat;
+  background-position : center bottom;
+}
+.interview-post{
+  width:50%;
+  height:100%;
+  background :#1d1d1f;
+  text-align : center;
+  position:relative;
+}
+.interview-post h4{
+  font-size:30px;
+  padding-top:5%;
+}
+.interview-post p{
+  font-size:16px;
+  line-height:30px;
+  word-break: keep-all;
+}
+.interview-name{
+  position:absolute;
+  bottom : 3%;
+  left: 10%;
+}
+.pagement{
+  margin-top:3%;
+  display : flex;
+  width:100%;
+  justify-content: center;
+}
