--- a/src/App.css
+++ b/src/App.css
@@ -445,7 +445,7 @@ body{
   padding :70px 0 80px;
   background :#1d1d1f;
   color:#f5f5f7;
-  margin-top: 30px;
+  text-align : left;
 }
 .footer-inner{
   padding : 0 50px;
@@ -468,12 +468,12 @@ body{
   margin: 0 10px;
 }
 .footer-mn{
-  color:#f5f5f7;
   font-size:13px;
   font-weight: bold;
 }
 .footer-mn a{
   margin-right:10px;
+  color:#f5f5f7;
 }
 .footer-mn a::after{
   content:'|';
@@ -497,12 +497,12 @@ body{
 .footer-right p{
   word-break: keep-all;
   margin :0;
-  color:#4a4647;
+  color:#727275;
   max-width: 264px;
 }
 .footer-right strong{
-  font-weight: bold;
-  color:#4a4647;
+  font-weight: bolder;
+  color:#727275;
 }
 
 /* company style*/
@@ -510,7 +510,6 @@ body{
 .company{
   text-align : center;
   transition : all .8s;
-  padding : 0 50px;
   height:100%;
 }
 
@@ -522,9 +521,11 @@ body{
   align-items: center;
   flex-wrap : nowrap;
   margin:auto;
+  
 }
 .company-top-text{
   text-align : left !important;
+  padding : 0 5%;
 }
 .company-top-text p{
   font-size : 20px;
@@ -536,6 +537,10 @@ body{
   font-weight:bold;
   line-height:100px;
   margin: 0;
+}
+
+.earth{
+  padding : 0 5% 0 0;
 }
 
 .earth img{
@@ -592,11 +597,11 @@ body{
   width:100%;
   height:200px;
   margin-bottom:50px;
-  
+  display:flex;
+  justify-content: center;
 }
 .archive-content{
-  width:45%;
-  margin-left:auto;
+  width:500px;
   padding : 20px 0px;
   text-align:left;
   position:relative;
@@ -609,18 +614,30 @@ body{
 .archive-content p:nth-child(1){
   margin-top:30px;
 }
+.archive:nth-child(odd) .archive-content{
+  margin-left : 50%;
+}
+.archive:nth-child(even) .archive-content{
+  margin-right:50%;
+}
 .year{
   height:53px;
   font-size:24px;
-  border : 2px solid #fff;
+  border : 2px solid #000;
   border-radius:100px;
   padding :9px 30px;
-  background :#fff;
-  color:#000;
+  background :#000;
+  color:#fff;
   font-weight:bold;
 }
-.month{
-  padding-right:30px;
+.month {
+  padding-right:20px;
+  width:40px;
+}
+.happen{
+  display:inline-block;
+  width:440px;
+  margin : 10px 0;
 }
 .mg30{
   margin-top:30px;
@@ -631,21 +648,19 @@ body{
   display:block;
   width:16px;
   height:16px;
-  position:absolute;
-  top:26px;
   border-radius:50%;
   background:#c2c2c2;
+  position:absolute;
+  top:23px;
+  left:50%; 
 }
 .archive:nth-child(odd) .archive-content::after{
-  left:-79px;
-}
-.archive:nth-child(even) .archive-content{
-  margin-right:auto;
-  margin-left:10%;
+  left : calc(50% - 77.5%);
 }
 .archive:nth-child(even) .archive-content::after{
-  right:63px;
+  left : calc(50% + 74.5%);
 }
+
 .archive:last-child{
   margin-bottom:0;
 }
@@ -660,4 +675,80 @@ body{
   font-weight:bold;
   margin:40px auto 50px;
   cursor: pointer;
+}
+.company-list{
+  background: #f5f6f9;
+  padding : 0 5%;
+  text-align: left;
+}
+.company-list-box{
+  padding :50px 0;
+  width: 45%;
+  display:inline-flex;
+  justify-content: space-between;
+  text-align:left;
+  margin :0;
+  border-bottom : 1px solid rgba(26, 26, 26, 0.2);
+}
+.company-list-box:last-child{
+  border-bottom:none;
+}
+.company-list-box:nth-child(odd){
+  margin-right: 10%;
+}
+
+.company-list-box h3{
+  font-size:26px;
+  font-weight:bolder;
+  width:280px;
+  flex-shrink: 0;
+}
+.company-list-box p{
+  font-size:16px;
+  font-weight:500;
+  color:#555555;
+  margin-bottom:40px;
+  width: 320px;
+  word-break: keep-all;
+  line-height: 26px;
+  flex-shrink: 1;
+}
+.company-address{
+  position:relative;
+}
+.dark-tem-company{
+  background : #000;
+  color:#fff;
+}
+.company-link{
+  display:flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.circle{
+  width:40px;
+  height:40px;
+  border-radius: 50%;
+  background:#000;
+  position:relative;
+  margin-left:10px;
+}
+.circle i{
+  width:20px;
+  border:0.5px solid #fff;
+  position:absolute;
+  bottom:20px;
+  right:10px;
+  z-index:10;
+}
+.circle i:first-child{
+  transform : rotate(45deg);
+  width : 10px;
+  bottom : 24px;
+  right : 9px;
+}
+.circle i:last-child{
+  transform : rotate(-45deg);
+  width : 10px;
+  bottom : 15px;
 }
