--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@
 .App {
   text-align: center;
 }
-
+ul{
+  padding:0;
+}
 li{
   list-style:none;
 }
@@ -136,7 +138,7 @@ body{
   margin : 200px 100px 0 0;
 }
 .text{
-  font-size:60px;
+  font-size:3.6rem;
   line-height:80px;
   font-weight:bold;
   position:absolute;
@@ -382,7 +384,7 @@ body{
   left: 10%;
 }
 .pagement{
-  margin-top:3%;
+  margin:3% 0 3% 0;
   display : flex;
   width:100%;
   justify-content: center;
@@ -680,6 +682,7 @@ body{
   background: #f5f6f9;
   padding : 0 5%;
   text-align: left;
+  
 }
 .company-list-box{
   padding :50px 0;
@@ -688,7 +691,7 @@ body{
   justify-content: space-between;
   text-align:left;
   margin :0;
-  border-bottom : 1px solid rgba(26, 26, 26, 0.2);
+  
 }
 .company-list-box:last-child{
   border-bottom:none;
@@ -751,4 +754,184 @@ body{
   transform : rotate(-45deg);
   width : 10px;
   bottom : 15px;
+}
+/*recruit - area*/
+.recruit-area{
+  width:100%;
+  overflow-x: hidden;
+  height:100vh;
+  background :#000;
+  position:relative;
+}
+.recruit-header{
+  width:100%;
+  height:100vh;
+  overflow:hidden;
+}
+.recruit-header canvas::-webkit-scrollbar{
+  display:none;
+}
+.recruit-text{
+  width:100%;
+  height:100vh;
+  position:absolute;
+  top:0;
+  left:0;
+  font-size:3.6rem;
+  display:flex;
+  justify-content: flex-start;
+  align-items: center;
+  color:#fff;
+}
+.recruit-text h4{
+  margin-left: 100px;
+}
+.recruit-main{
+  font-size:1.6rem;
+  overflow:hidden;
+}
+.tabs{
+  width:100%;
+  display:flex;
+  margin : 20px 0;
+  justify-content: center;
+  border-bottom:1px solid #ccc;
+}
+.tabs ul{
+  display:flex;
+}
+.tabs .tab{
+  flex-shrink: 1;
+  line-height:46px;
+  flex-grow:1;
+  width:fit-content;
+  height: auto !important;
+  cursor:pointer;
+  
+}
+.tabs .tab a{
+  padding:16px 30px;
+  color:#777777;
+  font-size:22px;
+}
+.yellow-tag{
+  border-radius : 100px;
+  background :#ffdc00;
+  width:200px;
+  height:120% !important;
+  text-align:center;
+  transition: all .7s;
+  font-weight:bold !important;
+  color:#000 !important;
+}
+.rel{
+  position:relative;
+  width:100%;
+}
+.R-life{
+  width:100%;
+  height:700px;
+  display:flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  transition:all .5s;
+}
+.R-life::-webkit-scrollbar{
+  display:none;
+}
+.R-back{
+  background :#f5f5f7;
+  border-radius: 30px;
+  width:90%;
+  height:1500px;
+  display:flex;
+  overflow:hidden;
+  flex-shrink: 0;
+  margin : 70px 5% 0 5%;
+  position:relative;
+}
+.R-textbox{
+  width:50%;
+  flex-shrink: 0;
+  padding: 80px 0 0;
+  height: fit-content
+}
+.R-titlebox{
+  font-size:40px;
+  font-weight:bold;
+  padding : 0 50px;
+}
+.titlenumber{
+  font-size:30px !important;
+}
+.R-title{
+  margin-top:20px;
+}
+.R-pagement{
+  display:flex;
+  width:fit-content;
+  position:absolute;
+  top:330px;
+  left:50px;
+}
+.Right-pagement{
+  width:50px;
+  height:50px;
+  border-radius: 50%;
+  background:#000;
+  position:relative;
+  margin-left:10px;
+  cursor : pointer;
+}
+.Left-pagement{
+  width:50px;
+  height:50px;
+  border-radius: 50%;
+  background:#000;
+  position:relative;
+  margin-left:10px;
+  position:relative;
+  cursor : pointer;
+}
+.Left-pagement i{
+  display:block;
+  width:18px;
+  border:3.5px solid #fff;
+  background :#fff;
+  border-radius : 30px;
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+}
+.Left-pagement i:first-child{
+  transform:rotate(-45deg);
+  top:14px !important;
+  left:8px !important;
+}
+.Left-pagement i:last-child{
+  transform:rotate(45deg);
+  top:28px !important;
+  left:8px !important;
+}
+.Right-pagement i{
+  display:block;
+  width:18px;
+  border:3.5px solid #fff;
+  background :#fff;
+  border-radius : 30px;
+  position:absolute;
+  top:50%;
+  right:50%;
+  transform:translate(-50%,-50%);
+}
+.Right-pagement i:first-child{
+  transform:rotate(45deg);
+  top:14px !important;
+  right:8px !important;
+}
+.Right-pagement i:last-child{
+  transform:rotate(-45deg);
+  top:28px !important;
+  right:8px !important;
 }
